# hspec-tutorial

./: .gitignore  README.md  time-service.cabal
src/: App.hs
test/: AppSpec.hs
