name:             time-service
version:          0.1.0
build-type:       Simple
cabal-version:    >= 1.8

library
  exposed: False
  hs-source-dirs:
      src
  exposed-modules:
      App
  build-depends:
                  base >= 4.8 && < 5
                , aeson == 0.9.*
                , bytestring >= 0.10.6.0
                , hspec >= 2.2.1
                , hspec-wai >= 0.6.4
                , hspec-wai-json >= 0.6.1
                , scotty >= 0.5
                , time
                , transformers
                , wai

executable time-service
  hs-source-dirs:
      driver
  main-is:
      Main.hs
  build-depends:
                  base >= 4.8 && < 5
                , bytestring >= 0.10.6.0
                , hspec >= 2.2.1
                , hspec-wai >= 0.6.4
                , hspec-wai-json >= 0.6.1
                , time
                , time-service
                , warp

test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
                  base >= 4.8 && < 5
                , HUnit
                , QuickCheck >= 2.8.1
                , bytestring >= 0.10.6.0
                , hspec >= 2.2.1
                , hspec-wai >= 0.6.4
                , hspec-wai-json >= 0.6.1
                , http-types
                , time
                , time-service
                , wai
                , wai-extra >= 3
